<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_baseline_schedule_icon"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_training"
        android:icon="@drawable/ic_baseline_directions_run_24_black"
        android:title="@string/title_training" />

    <item
        android:id="@+id/navigation_donate"
        android:icon="@drawable/ic_baseline_reports_icon"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_account" />

</menu>