<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_drawer_schedule"
            android:icon="@drawable/ic_baseline_schedule_icon"
            android:title="@string/title_schedule" />
        <item
            android:id="@+id/nav_drawer_donate"
            android:icon="@drawable/ic_baseline_reports_icon"
            android:title="@string/title_report" />
        <item
            android:id="@+id/nav_drawer_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/title_account" />

        <item
            android:id="@+id/nav_drawer_aboutus"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/title_aboutus" />
    </group>
</menu>