<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_drawer"
    app:startDestination="@+id/nav_drawer_home">

    <fragment
        android:id="@+id/nav_drawer_home"
        android:name="com.app.atl_test_app_1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_drawer_schedule"
        android:name="com.app.atl_test_app_1.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_drawer_report"
        android:name="com.app.atl_test_app_1.ui.report.DailyReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_daily_report" />
    <fragment
        android:id="@+id/nav_drawer_account"
        android:name="com.app.atl_test_app_1.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_drawer_aboutus"
        android:name="com.app.atl_test_app_1.ui.aboutus.AboutUsFragment"
        android:label="@string/title_aboutus"
        tools:layout="@layout/fragment_about_us" />
</navigation>